--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
                         <!-- En móvil (default) está abajo a la derecha pero sin margen negativo excesivo. En md usa margen negativo -->
                         <div class="absolute -bottom-4 right-0 md:-bottom-6 md:-right-6 bg-white p-3 md:p-4 rounded-xl shadow-xl flex items-center gap-2 md:gap-3 animate-bounce max-w-[180px] md:max-w-none" style="animation-duration: 3s;">
                             <div class="bg-green-100 p-2 rounded-full text-green-600 shrink-0">
-                                <i class="fas fa-chart-line text-lg md:text-xl"></i>
+                                <i class="fas fa-check-circle text-lg md:text-xl"></i>
                             </div>
                             <div>
-                                <p class="text-[10px] md:text-xs text-gray-500 font-bold uppercase">Rendimiento</p>
-                                <p class="text-gray-900 font-bold text-sm md:text-lg">99/100 Google</p>
+                                <p class="text-[10px] md:text-xs text-gray-500 font-bold uppercase">Estado</p>
+                                <p class="text-gray-900 font-bold text-sm md:text-lg">Lista para publicar</p>
                             </div>
                         </div>
                     </div>
