--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                 <a href="#about" class="block px-3 py-2 text-white font-medium hover:bg-white/10 rounded-md">Sobre mí</a>
                 <a href="#services" class="block px-3 py-2 text-white font-medium hover:bg-white/10 rounded-md">Servicios</a>
                 <a href="#portfolio" class="block px-3 py-2 text-white font-medium hover:bg-white/10 rounded-md">Portafolio</a>
+                <a href="#pricing" class="block px-3 py-2 text-white font-medium hover:bg-white/10 rounded-md">Inversión</a>
                 <a href="#contact" class="block px-3 py-2 text-accent font-bold hover:bg-white/10 rounded-md">Solicitar Presupuesto</a>
             </div>
         </div>
@@ -166,7 +167,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="pt-28 pb-16 md:pt-32 md:pb-20 bg-primary text-white relative overflow-hidden">
-        <!-- Manchas de fondo: Ajustadas para no romper el ancho en móviles -->
+        <!-- Manchas de fondo -->
         <div class="absolute top-0 right-0 -mr-20 -mt-20 w-64 h-64 md:w-96 md:h-96 rounded-full bg-accent opacity-10 blur-3xl pointer-events-none"></div>
         <div class="absolute bottom-0 left-0 -ml-20 -mb-20 w-64 h-64 md:w-80 md:h-80 rounded-full bg-secondary opacity-10 blur-3xl pointer-events-none"></div>
 
@@ -211,7 +212,12 @@
                                 decoding="async"
                                 class="w-full h-full object-cover opacity-80 group-hover:scale-105 transition duration-700">
                            
-                           <div class="absolute inset-0 bg-gradient-to-t from-primary/90 to-transparent flex items-end p-4 md:p-6">
+                           <!-- 
+                                CORRECCIÓN: Agregado 'pb-20' (padding-bottom 5rem) en móviles para subir el texto 
+                                y que no choque con la tarjeta flotante de abajo a la derecha. 
+                                En desktop vuelve a 'md:pb-6' (padding-bottom normal).
+                           -->
+                           <div class="absolute inset-0 bg-gradient-to-t from-primary/90 to-transparent flex items-end px-4 pt-4 pb-20 md:p-6">
                                 <div>
                                     <p class="text-accent font-bold text-xs md:text-sm mb-1">PRESENCIA DIGITAL</p>
                                     <p class="text-white font-medium text-sm md:text-base">Sitios web listos para publicar.</p>
@@ -219,8 +225,7 @@
                            </div>
                         </div>
 
-                        <!-- Tarjeta Flotante ajustada para móvil -->
-                        <!-- En móvil (default) está abajo a la derecha pero sin margen negativo excesivo. En md usa margen negativo -->
+                        <!-- Tarjeta Flotante -->
                         <div class="absolute -bottom-4 right-0 md:-bottom-6 md:-right-6 bg-white p-3 md:p-4 rounded-xl shadow-xl flex items-center gap-2 md:gap-3 animate-bounce max-w-[180px] md:max-w-none" style="animation-duration: 3s;">
                             <div class="bg-green-100 p-2 rounded-full text-green-600 shrink-0">
                                 <i class="fas fa-check-circle text-lg md:text-xl"></i>
