Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://martcode.vercel.app/">
     <meta property="og:title" content="Martcode.dev | Landing Pages Profesionales">
-    <meta property="og:description" content="Diseño y desarrollo de sitios web simples y claros para tu negocio.">
+    <meta property="og:description" content="Diseño landing pages claras y funcionales para que tu negocio se vea profesional y te contacten sin vueltas.">
     <meta property="og:image" content="https://martcode.vercel.app/Captura%20de%20pantalla%202025-07-10%20023854.png">
 
     <title>Martcode.dev | Desarrollo Web Simple & Profesional</title>
@@ -703,3 +703,4 @@
     </script>
 </body>
 </html>
+
